--- a/.github/workflows/scrap.yml
+++ b/.github/workflows/scrap.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - main
   pull_request:
-    branches:
-      - main
+      branches:
+        - main
   workflow_dispatch:
 
 permissions:
@@ -30,15 +30,30 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests
-          pip freeze | grep requests  # Yeh check karega ki requests install hua ya nahi
+          pip list | grep requests  # Debugging ke liye
 
       - name: Debug - Show Installed Python Packages
-        run: pip list  # Yeh debug step dikhayega ki kaunse packages install hue hain
+        run: pip list
 
-      - name: Run extraction script
+      - name: Create and Run Extraction Script
         run: |
-          cat <<EOF > script.py
+          echo 'import requests
+import re
 
 def get_aptoide_download_link(package_name):
-    url = f'https://en.aptoide.com/app/{package_name}'
-    headers =
+    url = f"https://en.aptoide.com/app/{package_name}"
+    headers = {"User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)"}
+    response = requests.get(url, headers=headers)
+    if response.status_code != 200:
+        print(f"Error: Unable to access {url}")
+        exit(1)
+    match = re.search(r'"apkUrl":"(https://[^"]+)"', response.text)
+    if match:
+        print(f"Direct Download Link: {match.group(1)}")
+    else:
+        print("Error: Download link not found.")
+        exit(1)
+
+package_name = "com.instagram.android"
+get_aptoide_download_link(package_name)' > script.py
+          python script.py
