--- a/.github/workflows/scrap.yml
+++ b/.github/workflows/scrap.yml
@@ -1,12 +1,12 @@
-name: Extract Instagram APK from Aptoide
+name: Extract Instagram APK from Aptoide (Java)
 
 on:
   push:
     branches:
       - main
   pull_request:
-      branches:
-        - main
+    branches:
+      - main
   workflow_dispatch:
 
 permissions:
@@ -21,41 +21,13 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Set up JDK
+        uses: actions/setup-java@v3
         with:
-          python-version: '3.x'
+          distribution: 'temurin'
+          java-version: '17'
 
-      - name: Install dependencies
+      - name: Run Gradle Task
         run: |
-          python -m pip install --upgrade pip
-          pip install requests
-
-      - name: Verify requests installation
-        run: |
-          pip show requests || echo "requests module not found!"
-
-      - name: Run extraction script
-        run: |
-        
-def get_aptoide_download_link(package_name):
-    url = f"https://en.aptoide.com/app/{package_name}"
-    headers = {"User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)"}
-    response = requests.get(url, headers=headers)
-    if response.status_code != 200:
-        print(f"Error: Unable to access {url}")
-        return None
-    match = re.search(r"\"apkUrl\":\"(https://[^\"]+)\"", response.text)
-    if match:
-        return match.group(1)
-    print("Error: Download link not found.")
-    return None
-
-package_name = "com.instagram.android"
-download_link = get_aptoide_download_link(package_name)
-
-if download_link:
-    print(f"Direct Download Link: {download_link}")
-else:
-    exit(1)' > script.py
-          python script.py
+          chmod +x gradlew
+          ./gradlew extractDownloadLink
