--- a/.github/workflows/scrap.yml
+++ b/.github/workflows/scrap.yml
@@ -1,97 +1,4 @@
-name: Extract Aptoide App Link
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
 
-permissions:
-  contents: write
-
-jobs:
-  extract_aptoide_link:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Initialize Gradle Project (Force Overwrite)
-        run: |
-          rm -rf gradle build.gradle settings.gradle src
-          gradle init --type java-application --dsl groovy --package AptoideScraperProject --project-name AptoideScraperProject --overwrite
-          mkdir -p src/main/java
-
-      - name: Replace Gradle Build Files
-        run: |
-          cat <<EOF > settings.gradle
-          rootProject.name = 'AptoideScraperProject'
-          EOF
-
-          cat <<EOF > build.gradle
-          plugins {
-              id 'java'
-              id 'application'
-          }
-
-          repositories {
-              mavenCentral()
-          }
-
-          dependencies {
-              implementation 'org.jsoup:jsoup:1.15.3'
-          }
-
-          application {
-              mainClass = 'AptoideScraper'
-          }
-
-          task extractAppLink(type: JavaExec) {
-              mainClass = 'AptoideScraper'
-              classpath = sourceSets.main.runtimeClasspath
-          }
-          EOF
-
-      - name: Create Java Scraper File
-        run: |
-          cat <<EOF > src/main/java/AptoideScraper.java
-          import java.io.FileWriter;
-          import java.io.IOException;
-
-          public class AptoideScraper {
-              public static void main(String[] args) {
-                  String appName = "instagram"; // Change app name if needed
-                  String aptoideUrl = "https://" + appName + ".en.aptoide.com/app";
-                  
-                  // Write the URL to a file
-                  try (FileWriter writer = new FileWriter("aptoide_link.txt")) {
-                      writer.write(aptoideUrl);
-                      System.out.println("Aptoide App Link saved to aptoide_link.txt");
-                  } catch (IOException e) {
-                      System.out.println("Error: Unable to write file.");
-                  }
-              }
-          }
-          EOF
-
-      - name: Grant execute permission for Gradle
-        run: chmod +x gradlew
-
-      - name: Build and Run Scraper
-        run: ./gradlew extractAppLink
-
-      - name: Upload Aptoide Link File
-        uses: actions/upload-artifact@v4  # 🔥 Updated Version
-        with:
-          name: aptoide-link
-          path: aptoide_link.txt
+- name: Download Instagram APK
+  run: python scripts/download_instagram.py
