--- a/.github/workflows/scrap.yml
+++ b/.github/workflows/scrap.yml
@@ -29,6 +29,8 @@ jobs:
           echo "GP_PASSWORD=${{ secrets.GP_PASSWORD }}" >> .env
           echo "GSF_ID=${{ secrets.GSF_ID }}" >> .env
 
+chmod +x instaapk/scripts/download_instagram.py
+
       - name: Run APK fetcher
         run: instaapk/scripts/download_instagram.py
 
